style(add-task-overlay): fix scrollbar

--- a/member/css/add-task-responsive.css
+++ b/member/css/add-task-responsive.css
@@ -98,6 +98,7 @@
     padding: 0px 11px;
     font-weight: 400;
     gap: 0px;
+    white-space: nowrap;
   }
 
   .overlay_add_task {
@@ -106,6 +107,7 @@
 
   .add-task__priority-button img {
     margin-left: 0;
+    width: 24px;
   }
 }
 
