--- a/styles/join.css
+++ b/styles/join.css
@@ -53,7 +53,7 @@ form,
 }
 
 form {
-  gap: 60px;
+  gap: 54px;
 }
 
 /* contact css */
